--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Flee from pangolins</title>
         <link href="css/style.css" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
     </head>
     <body>
 
